# vitiate

./: .gitignore  .prettierignore  .release-please-manifest.json  CHANGELOG.md  Cargo.toml  LICENSE  README.md  commitlint.config.js  context7.json  deny.toml  eslint.config.js  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-please-config.json  rust-toolchain.toml  treefmt.toml  tsconfig.json  turbo.json
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  release.yml
benchmarks/: README.md  bench.config.json  run-bench.mjs  run-lib.mjs  setup.mjs
benchmarks/forge/: README.md  package.json  tsconfig.json  vitest.config.ts
benchmarks/jpeg/: .gitignore  README.md  package.json  vitest.config.ts
docs/: astro.config.mjs  package.json
docs/src/: routeData.ts
examples/: fuzzme.mjs
examples/detectors/: .gitignore  package.json  vitest.config.ts  vitest.fuzz-pipeline.config.ts  vitest.fuzz.config.ts
examples/engine-raw/: README.md  fuzzme.mjs
examples/flatted-vuln/: package.json  tsconfig.json  vitest.config.ts  vitest.fuzz.config.ts
examples/napi-raw/: README.md  fuzzme.mjs
examples/url-parser/: package.json  vitest.config.ts  vitest.fuzz-pipeline.config.ts  vitest.fuzz.config.ts
frotz/: package.json
frotz-engine/: Cargo.toml
frotz-engine/src/: lib.rs
frotz-instrument/: Cargo.toml  package.json
frotz-instrument/.cargo/: config.toml
frotz-instrument/src/: lib.rs
frotz-napi/: Cargo.toml  index.d.ts  index.js  package.json
frotz-napi/npm/darwin-arm64/: README.md  package.json
frotz-napi/npm/darwin-x64/: README.md  package.json
frotz-napi/npm/linux-arm64-gnu/: README.md  package.json
frotz-napi/npm/linux-x64-gnu/: README.md  package.json
frotz-napi/npm/win32-x64-msvc/: README.md  package.json
frotz-napi/src/: lib.rs
frotz/src/: index.ts
vitiate/: CHANGELOG.md  bin.mjs  package.json  tsup.config.ts  vitest.config.ts
vitiate-core/: CHANGELOG.md  package.json  tsdown.config.ts  tsup.config.ts  vitest.config.ts
vitiate-core/src/: cjs-compile.test.ts  cjs-compile.ts  cli.test.ts  cli.ts  cmplog-boundary.test.ts  cmplog-write.test.ts  config.test.ts  config.ts  corpus.test.ts  corpus.ts  dedup.test.ts  dedup.ts  engine-batch.test.ts  fuzz-api.test.ts  fuzz-regression-replay.test.ts  fuzz.ts  globals.ts  index.ts  loop.test.ts  loop.ts  merge.test.ts  merge.ts  minimize.test.ts  minimize.ts  nix-base32.test.ts  nix-base32.ts  plugin.test.ts  plugin.ts  reporter.test.ts  reporter.ts  setup.test.ts  setup.ts  supervisor.test.ts  supervisor.ts  test-utils.ts
vitiate-core/test/: cjs-subpath.d.ts  detector-pipeline.test.ts  e2e-cjs-dep.test.ts  e2e-cjs-fixture.test.ts  e2e-detectors.test.ts  e2e-fuzz.test.ts  e2e-instrumented.test.ts  e2e-reproduce.test.ts  e2e-supervisor-recovery.test.ts  e2e.test.ts  fuzz-pipeline.test.ts  integration.test.ts  vitest.cjs-dep.config.ts  vitest.cjs-fixture.config.ts  vitest.e2e.config.ts  vitest.fuzz-pipeline.config.ts  vitest.instrumented.config.ts
vitiate-engine/: CHANGELOG.md  Cargo.toml  build.rs  index.d.ts  index.js  package.json
vitiate-engine/npm/darwin-arm64/: README.md  package.json
vitiate-engine/npm/darwin-x64/: README.md  package.json
vitiate-engine/npm/linux-arm-gnueabihf/: README.md  package.json
vitiate-engine/npm/linux-arm64-gnu/: CHANGELOG.md  README.md  package.json
vitiate-engine/npm/linux-arm64-musl/: README.md  package.json
vitiate-engine/npm/linux-x64-gnu/: README.md  package.json
vitiate-engine/npm/linux-x64-musl/: README.md  package.json
vitiate-engine/npm/win32-arm64-msvc/: README.md  package.json
vitiate-engine/npm/win32-x64-msvc/: CHANGELOG.md  README.md  package.json
vitiate-engine/src/: cmplog.rs  coverage.rs  exception_handler.rs  lib.rs  shmem_stash.rs  trace.rs  types.rs  v8_shim.cc  v8_shim.rs  watchdog.rs
vitiate-engine/src/engine/: calibration.rs  cmplog_metadata.rs  colorization.rs  coverage.rs  feature_detection.rs  generalization.rs  grimoire.rs  json.rs  mod.rs  mutator.rs  run_batch.rs  stages.rs  token_tracker.rs  unicode.rs
vitiate-engine/src/engine/tests/: abort_stage.rs  basic_feedback.rs  calibration.rs  calibration_execs.rs  cmplog_lifecycle.rs  cmplog_metadata.rs  colorization.rs  deferred_detection.rs  depth_tracking.rs  dictionary.rs  features.rs  generalization.rs  grimoire.rs  helpers.rs  input_handling.rs  json_stage.rs  metadata_population.rs  minimizer.rs  mod.rs  mutator.rs  novelty.rs  pipeline.rs  redqueen.rs  scheduling.rs  seed_evaluation.rs  shutdown.rs  stage_lifecycle.rs  token_promotion.rs  unicode.rs  unstable_edges.rs
vitiate-engine/test/: panic-exit.mjs  smoke.mjs
vitiate-fuzzed-data-provider/: CHANGELOG.md  package.json  tsdown.config.ts  tsup.config.ts
vitiate-instrument/: Cargo.toml  package.json
vitiate-napi/: Cargo.toml  build.rs  index.d.ts  index.js  package.json
vitiate-napi/npm/darwin-arm64/: README.md  package.json
vitiate-napi/npm/darwin-x64/: README.md  package.json
vitiate-napi/npm/linux-arm64-gnu/: README.md  package.json
vitiate-napi/npm/linux-x64-gnu/: README.md  package.json
vitiate-napi/npm/linux-x64-musl/: package.json
vitiate-napi/npm/win32-x64-msvc/: README.md  package.json
vitiate-napi/src/: cmplog.rs  engine.rs  exception_handler.rs  input_stash.rs  lib.rs  shmem_stash.rs  trace.rs  types.rs  v8_shim.cc  v8_shim.rs  watchdog.rs
vitiate-napi/src/engine/: calibration.rs  cmplog_metadata.rs  colorization.rs  coverage.rs  feature_detection.rs  generalization.rs  grimoire.rs  mod.rs  mutator.rs  stages.rs  test_helpers.rs  token_tracker.rs  unicode.rs
vitiate-napi/src/engine/tests/: abort_stage.rs  cmplog_lifecycle.rs  cmplog_metadata.rs  colorization.rs  deferred_detection.rs  depth_tracking.rs  dictionary.rs  generalization.rs  grimoire.rs  helpers.rs  metadata_population.rs  minimizer.rs  mod.rs  mutator.rs  novelty.rs  pipeline.rs  redqueen.rs  scheduling.rs  token_promotion.rs  unicode.rs
vitiate-napi/test/: smoke.mjs
vitiate-swc-plugin/: Cargo.toml  package.json
vitiate-swc-plugin/.cargo/: config.toml
vitiate-swc-plugin/src/: lib.rs
(+527 files in other folders)
