[workspace]
members = ["vitiate-swc-plugin", "vitiate-engine"]
resolver = "3"

[workspace.package]
version = "0.1.3"
edition = "2024"
rust-version = "1.89"
license = "MIT"

[workspace.dependencies]
hashbrown = { version = "0.16.1", default-features = false }
libafl = { git = "https://github.com/mjkoo/LibAFL", branch = "constructable-unicode-metadata", default-features = false, features = ["std", "derive", "serdeany_autoreg", "unicode"] }
libafl_bolts = { git = "https://github.com/mjkoo/LibAFL", branch = "constructable-unicode-metadata", default-features = false, features = ["std", "derive", "serdeany_autoreg"] }
napi = "3.0.0"
napi-build = "2"
napi-derive = "3.0.0"
serde = "1"
swc_core = "58.0.*"
ryu-js = "1"
serde_json = "1"
cc = "1"
libc = "0.2"
sha2 = "0.10"
tempfile = "3.27.0"

[workspace.lints.clippy]
all = "deny"

[profile.release]
lto = true
strip = "symbols"
