[package]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
name = "frotz_napi"
version.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
frotz-engine.workspace = true
napi.workspace = true
napi-derive.workspace = true

[build-dependencies]
napi-build.workspace = true
