[package]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
name = "vitiate_engine"
version.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
hashbrown.workspace = true
libafl.workspace = true
libafl_bolts.workspace = true
napi.workspace = true
napi-derive.workspace = true
libc.workspace = true
ryu-js.workspace = true
sha2.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Kernel",
    "Win32_System_Threading",
    "Win32_Foundation",
] }

[build-dependencies]
cc.workspace = true
napi-build.workspace = true

[dev-dependencies]
tempfile = { workspace = true }
