[package]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
name = "vitiate_napi"
version.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
libafl.workspace = true
libafl_bolts.workspace = true
napi.workspace = true
napi-derive.workspace = true
libc.workspace = true
ryu-js.workspace = true

[build-dependencies]
cc.workspace = true
napi-build.workspace = true
