[package]
name = "vitiate-swc-plugin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
swc_core = { workspace = true, features = ["ecma_plugin_transform"] }

[dev-dependencies]
swc_core = { workspace = true, features = [
    "ecma_plugin_transform",
    "ecma_parser",
    "ecma_codegen",
] }

# .cargo/config.toml defines few alias to build plugin.
# cargo build-wasip1 generates wasm32-wasip1 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
